[gd_scene load_steps=12 format=4 uid="uid://bckrbscq7i46c"]

[ext_resource type="Script" uid="uid://clfhwo5k0rc5o" path="res://test_scenes/scenes/player_2d.gd" id="1_2ugl5"]
[ext_resource type="Script" uid="uid://dkgvd5u54irye" path="res://test_scenes/scenes/player_camera_2d.gd" id="2_rrv6s"]
[ext_resource type="Script" uid="uid://dsnyquodhwsd2" path="res://test_scenes/scenes/rich_text_label.gd" id="3_kymn1"]
[ext_resource type="Texture2D" uid="uid://50eupvcnw52e" path="res://test_scenes/art/test_scene_midground_tileset.png" id="4_5u3au"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54n8g"]
size = Vector2(8, 16)

[sub_resource type="CanvasTexture" id="CanvasTexture_54n8g"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2ugl5"]
a = Vector2(0, -8)
b = Vector2(0, 8)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kymn1"]
a = Vector2(3, 0)
b = Vector2(-5, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kymn1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s8q2u"]
texture = ExtResource("4_5u3au")
texture_region_size = Vector2i(4, 4)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)

[sub_resource type="TileSet" id="TileSet_5wgse"]
tile_size = Vector2i(4, 4)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_s8q2u")

[node name="TestScene" type="Node2D"]

[node name="Player2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_2ugl5")

[node name="PlayerCollision2D" type="CollisionShape2D" parent="Player2D"]
shape = SubResource("RectangleShape2D_54n8g")

[node name="Sprite2D" type="Sprite2D" parent="Player2D"]
position = Vector2(-4, -8)
scale = Vector2(8, 16)
texture = SubResource("CanvasTexture_54n8g")

[node name="LeftWallDetectionArea2D" type="Area2D" parent="Player2D"]
position = Vector2(-5, 0)

[node name="LeftWallDetectionCollisionShape2D" type="CollisionShape2D" parent="Player2D/LeftWallDetectionArea2D"]
shape = SubResource("SegmentShape2D_2ugl5")

[node name="RightWallDetectionArea2D" type="Area2D" parent="Player2D"]
position = Vector2(5, 0)

[node name="RightWallDetectionCollisionShape2D" type="CollisionShape2D" parent="Player2D/RightWallDetectionArea2D"]
shape = SubResource("SegmentShape2D_2ugl5")

[node name="GroundDetectionArea2D" type="Area2D" parent="Player2D"]
position = Vector2(0, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2D/GroundDetectionArea2D"]
position = Vector2(1, 0)
shape = SubResource("SegmentShape2D_kymn1")

[node name="WorldWalls" type="StaticBody2D" parent="."]
position = Vector2(1, 90)

[node name="Left" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(-162, -96)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_kymn1")

[node name="Right" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(160, -96)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_kymn1")

[node name="Up" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(0, -184)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_kymn1")

[node name="Down" type="CollisionShape2D" parent="WorldWalls"]
shape = SubResource("WorldBoundaryShape2D_kymn1")

[node name="PlayerCamera2D" type="Camera2D" parent="."]
position_smoothing_speed = 50.0
script = ExtResource("2_rrv6s")

[node name="DebugTextLabel" type="RichTextLabel" parent="PlayerCamera2D"]
offset_left = -155.0
offset_top = -86.0
offset_right = 71.0
offset_bottom = 297.0
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("3_kymn1")

[node name="TestScene" type="Node2D" parent="."]

[node name="Background" type="TileMapLayer" parent="TestScene"]
z_index = -1

[node name="Midground" type="TileMapLayer" parent="TestScene"]
tile_map_data = PackedByteArray("AAD6/wQAAQABAAAAAAD7/wQAAQACAAAAAAD8/wQAAQABAAAAAAD9/wQAAQACAAAAAAD+/wQAAQABAAAAAAD//wQAAQACAAAAAAAAAAQAAQABAAAAAAABAAQAAQACAAAAAAACAAQAAQABAAAAAAADAAQAAQACAAAAAAAEAAQAAQABAAAAAAAFAAQAAQACAAAAAAAGAAQAAQABAAAAAAAHAAQAAQACAAAAAAAIAAQAAQABAAAAAAAJAAQAAQACAAAAAAAKAAQAAQABAAAAAAALAAQAAQACAAAAAAD4/wQAAQABAAAAAAD5/wQAAQACAAAAAAD2/wQAAQABAAAAAAD3/wQAAQACAAAAAAD0/wQAAQABAAAAAAD1/wQAAQACAAAAAAAMAAQAAQABAAAAAAANAAQAAQACAAAAAAAOAAQAAQADAAAAAADz/wQAAQAAAAAAAADz/wUAAQAAAAEAAAAOAAUAAQADAAEAAAD0/wUAAQABAAEAAAD1/wUAAQACAAEAAAD2/wUAAQABAAEAAAD3/wUAAQACAAEAAAD4/wUAAQABAAEAAAD5/wUAAQACAAEAAAD6/wUAAQABAAEAAAD7/wUAAQACAAEAAAD8/wUAAQABAAEAAAD9/wUAAQACAAEAAAD+/wUAAQABAAEAAAD//wUAAQACAAEAAAAAAAUAAQABAAEAAAABAAUAAQACAAEAAAACAAUAAQABAAEAAAADAAUAAQACAAEAAAAEAAUAAQABAAEAAAAFAAUAAQACAAEAAAAGAAUAAQABAAEAAAAHAAUAAQACAAEAAAAIAAUAAQABAAEAAAAJAAUAAQACAAEAAAAKAAUAAQABAAEAAAALAAUAAQACAAEAAAAMAAUAAQABAAEAAAANAAUAAQACAAEAAAAOAAYAAQADAAQAAADz/wYAAQAAAAQAAAD0/wYAAQABAAQAAAD1/wYAAQACAAQAAAD2/wYAAQABAAQAAAD3/wYAAQACAAQAAAD4/wYAAQABAAQAAAD5/wYAAQACAAQAAAD6/wYAAQABAAQAAAD7/wYAAQACAAQAAAD8/wYAAQABAAQAAAD9/wYAAQACAAQAAAD+/wYAAQABAAQAAAD//wYAAQACAAQAAAAAAAYAAQABAAQAAAABAAYAAQACAAQAAAACAAYAAQABAAQAAAADAAYAAQACAAQAAAAEAAYAAQABAAQAAAAFAAYAAQACAAQAAAAGAAYAAQABAAQAAAAHAAYAAQACAAQAAAAIAAYAAQABAAQAAAAJAAYAAQACAAQAAAAKAAYAAQABAAQAAAALAAYAAQACAAQAAAAMAAYAAQABAAQAAAANAAYAAQACAAQAAADk//H/AQADAAAAAADk//L/AQADAAIAAADk//P/AQADAAMAAADk//T/AQADAAIAAADk//X/AQADAAMAAADk//b/AQADAAIAAADk//f/AQADAAMAAADk//j/AQADAAIAAADk//n/AQADAAMAAADk//r/AQADAAIAAADk//v/AQADAAMAAADk//z/AQADAAIAAADk//3/AQADAAMAAADk//7/AQADAAIAAADk////AQADAAMAAADk/wAAAQADAAIAAADk/wEAAQADAAMAAADk/wIAAQADAAIAAADk/wMAAQADAAMAAADk/wQAAQADAAQAAADj/wQAAQAAAAQAAADj/wEAAQAAAAIAAADj/wIAAQAAAAEAAADj/wMAAQAAAAIAAADj//7/AQAAAAMAAADj////AQAAAAIAAADj/wAAAQAAAAEAAADj//v/AQAAAAIAAADj//z/AQAAAAEAAADj//3/AQAAAAIAAADj//j/AQAAAAEAAADj//n/AQAAAAIAAADj//r/AQAAAAEAAADj//X/AQAAAAIAAADj//b/AQAAAAEAAADj//f/AQAAAAIAAADj//L/AQAAAAEAAADj//P/AQAAAAIAAADj//T/AQAAAAEAAADj//H/AQAAAAAAAADp//L/AQADAAMAAADp//H/AQABAAIAAADq//H/AQACAAQAAADp//P/AQADAAQAAADo//P/AQAAAAQAAADo//L/AQAAAAMAAADo//H/AQAAAAIAAADo//D/AQAAAAAAAADp//D/AQABAAAAAADq//D/AQACAAAAAADr//D/AQADAAAAAADr//H/AQADAAQAAADa/xQAAQABAAMAAADb/xQAAQABAAAAAADc/xQAAQACAAAAAADd/xQAAQABAAAAAADe/xQAAQACAAAAAADf/xQAAQABAAAAAADg/xQAAQACAAAAAADh/xQAAQABAAAAAADi/xQAAQACAAAAAADj/xQAAQABAAAAAADk/xQAAQACAAAAAADl/xQAAQABAAAAAADm/xQAAQACAAAAAADn/xQAAQABAAAAAADo/xQAAQACAAAAAADp/xQAAQABAAAAAADq/xQAAQACAAAAAADr/xQAAQABAAAAAADs/xQAAQACAAAAAADt/xQAAQABAAAAAADu/xQAAQACAAAAAADv/xQAAQABAAAAAADw/xQAAQACAAAAAADx/xQAAQABAAAAAADy/xQAAQACAAAAAADz/xQAAQABAAAAAAD0/xQAAQACAAAAAAD1/xQAAQABAAAAAAD2/xQAAQACAAAAAAD3/xQAAQABAAAAAAD4/xQAAQACAAAAAAD5/xQAAQABAAAAAAD6/xQAAQACAAAAAAD7/xQAAQABAAAAAAD8/xQAAQACAAAAAAD9/xQAAQABAAAAAAD+/xQAAQACAAAAAAD//xQAAQABAAAAAAAAABQAAQACAAAAAAABABQAAQABAAAAAAACABQAAQACAAAAAAADABQAAQABAAAAAAAEABQAAQACAAAAAAAFABQAAQABAAAAAAAGABQAAQACAAAAAAAHABQAAQABAAAAAAAIABQAAQACAAAAAAAJABQAAQABAAAAAAAKABQAAQACAAAAAAALABQAAQABAAAAAAAMABQAAQACAAAAAAANABQAAQABAAAAAAAOABQAAQACAAAAAAAPABQAAQABAAAAAAAQABQAAQACAAAAAAARABQAAQABAAAAAAASABQAAQACAAAAAAATABQAAQABAAAAAAAUABQAAQACAAAAAAAVABQAAQABAAAAAAAWABQAAQACAAAAAAAXABQAAQABAAAAAAAYABQAAQACAAAAAAAZABQAAQABAAAAAAAaABQAAQACAAAAAAAbABQAAQABAAAAAAAcABQAAQACAAAAAAAdABQAAQABAAAAAAAeABQAAQACAAAAAAAfABQAAQABAAAAAAAgABQAAQACAAAAAAAhABQAAQABAAAAAAAiABQAAQACAAAAAAAjABQAAQABAAAAAAAkABQAAQACAAAAAAAlABQAAQACAAMAAAAlABEAAQAAAAEAAAAlABIAAQAAAAIAAAAlABMAAQAAAAMAAAAlAA4AAQAAAAEAAAAlAA8AAQAAAAIAAAAlABAAAQAAAAMAAAAlAAsAAQAAAAEAAAAlAAwAAQAAAAIAAAAlAA0AAQAAAAMAAAAlAAgAAQAAAAEAAAAlAAkAAQAAAAIAAAAlAAoAAQAAAAMAAAAlAAUAAQAAAAEAAAAlAAYAAQAAAAIAAAAlAAcAAQAAAAMAAAAlAAIAAQAAAAEAAAAlAAMAAQAAAAIAAAAlAAQAAQAAAAMAAAAlAP//AQAAAAEAAAAlAAAAAQAAAAIAAAAlAAEAAQAAAAMAAAAlAPz/AQAAAAEAAAAlAP3/AQAAAAIAAAAlAP7/AQAAAAMAAAAlAPv/AQAAAAAAAAAmAPv/AQACAAMAAAAmAPn/AQAAAAEAAAAmAPr/AQAAAAIAAAAmAPf/AQAAAAEAAAAmAPj/AQAAAAIAAAAmAPX/AQAAAAEAAAAmAPb/AQAAAAIAAAAmAPP/AQAAAAEAAAAmAPT/AQAAAAIAAAAmAPH/AQAAAAEAAAAmAPL/AQAAAAIAAAAmAO//AQAAAAEAAAAmAPD/AQAAAAIAAAAmAO3/AQAAAAEAAAAmAO7/AQAAAAIAAAAmAOz/AQACAAIAAAAkAOz/AQABAAQAAAAlAOz/AQACAAQAAAAjAOz/AQAAAAQAAAAjAOr/AQAAAAIAAAAjAOv/AQAAAAMAAAAjAOn/AQAAAAMAAADa/xUAAQABAAEAAADa/xYAAQACAAEAAADb/xUAAQABAAEAAADb/xYAAQABAAEAAADc/xUAAQACAAEAAADc/xYAAQABAAEAAADd/xUAAQACAAEAAADd/xYAAQABAAEAAADe/xUAAQABAAEAAADe/xYAAQACAAEAAADf/xUAAQABAAEAAADf/xYAAQABAAEAAADg/xUAAQACAAEAAADg/xYAAQABAAEAAADh/xUAAQACAAEAAADh/xYAAQABAAEAAADi/xUAAQACAAEAAADi/xYAAQABAAEAAADj/xUAAQACAAEAAADj/xYAAQACAAEAAADk/xUAAQACAAEAAADk/xYAAQACAAEAAADl/xUAAQABAAEAAADl/xYAAQABAAEAAADm/xUAAQABAAEAAADm/xYAAQACAAEAAADn/xUAAQABAAEAAADn/xYAAQACAAEAAADo/xUAAQACAAEAAADo/xYAAQABAAEAAADp/xUAAQABAAEAAADp/xYAAQABAAEAAADq/xUAAQABAAEAAADq/xYAAQACAAEAAADr/xUAAQACAAEAAADr/xYAAQACAAEAAADs/xUAAQACAAEAAADs/xYAAQACAAEAAADt/xUAAQABAAEAAADt/xYAAQABAAEAAADu/xUAAQABAAEAAADu/xYAAQACAAEAAADv/xUAAQACAAEAAADv/xYAAQACAAEAAADw/xUAAQABAAEAAADw/xYAAQACAAEAAADx/xUAAQACAAEAAADx/xYAAQABAAEAAADy/xUAAQABAAEAAADy/xYAAQACAAEAAADz/xUAAQACAAEAAADz/xYAAQABAAEAAAD0/xUAAQACAAEAAAD0/xYAAQACAAEAAAD1/xUAAQABAAEAAAD1/xYAAQABAAEAAAD2/xUAAQABAAEAAAD2/xYAAQABAAEAAAD3/xUAAQABAAEAAAD3/xYAAQABAAEAAAD4/xUAAQABAAEAAAD4/xYAAQACAAEAAAD5/xUAAQABAAEAAAD5/xYAAQABAAEAAAD6/xUAAQACAAEAAAD6/xYAAQABAAEAAAD7/xUAAQABAAEAAAD7/xYAAQABAAEAAAD8/xUAAQACAAEAAAD8/xYAAQACAAEAAAD9/xUAAQABAAEAAAD9/xYAAQACAAEAAAD+/xUAAQABAAEAAAD+/xYAAQACAAEAAAD//xUAAQABAAEAAAD//xYAAQACAAEAAAAAABUAAQACAAEAAAAAABYAAQABAAEAAAABABUAAQABAAEAAAABABYAAQABAAEAAAACABUAAQACAAEAAAACABYAAQABAAEAAAADABUAAQACAAEAAAADABYAAQACAAEAAAAEABUAAQACAAEAAAAEABYAAQABAAEAAAAFABUAAQABAAEAAAAFABYAAQABAAEAAAAGABUAAQACAAEAAAAGABYAAQACAAEAAAAHABUAAQACAAEAAAAHABYAAQABAAEAAAAIABUAAQABAAEAAAAIABYAAQACAAEAAAAJABUAAQABAAEAAAAJABYAAQACAAEAAAAKABUAAQABAAEAAAAKABYAAQACAAEAAAALABUAAQABAAEAAAALABYAAQACAAEAAAAMABUAAQABAAEAAAAMABYAAQABAAEAAAANABUAAQACAAEAAAANABYAAQABAAEAAAAOABUAAQACAAEAAAAOABYAAQABAAEAAAAPABUAAQACAAEAAAAPABYAAQABAAEAAAAQABUAAQACAAEAAAAQABYAAQACAAEAAAARABUAAQABAAEAAAARABYAAQACAAEAAAASABUAAQACAAEAAAASABYAAQACAAEAAAATABUAAQABAAEAAAATABYAAQABAAEAAAAUABUAAQACAAEAAAAUABYAAQACAAEAAAAVABUAAQABAAEAAAAVABYAAQABAAEAAAAWABUAAQACAAEAAAAWABYAAQACAAEAAAAXABUAAQACAAEAAAAXABYAAQABAAEAAAAYABUAAQACAAEAAAAYABYAAQABAAEAAAAZABUAAQACAAEAAAAZABYAAQACAAEAAAAaABUAAQABAAEAAAAaABYAAQACAAEAAAAbABUAAQACAAEAAAAbABYAAQACAAEAAAAcABUAAQABAAEAAAAcABYAAQABAAEAAAAdABUAAQABAAEAAAAdABYAAQABAAEAAAAeABUAAQABAAEAAAAeABYAAQABAAEAAAAfABUAAQABAAEAAAAfABYAAQABAAEAAAAgABUAAQACAAEAAAAgABYAAQACAAEAAAAhABUAAQABAAEAAAAhABYAAQABAAEAAAAiABUAAQABAAEAAAAiABYAAQACAAEAAAAjABUAAQABAAEAAAAjABYAAQACAAEAAAAkABUAAQACAAEAAAAkABYAAQABAAEAAAAlABUAAQACAAEAAAAlABYAAQABAAEAAAAmAPz/AQABAAEAAAAmAP3/AQACAAEAAAAmAP7/AQACAAEAAAAmAP//AQABAAEAAAAmAAAAAQABAAEAAAAmAAEAAQABAAEAAAAmAAIAAQACAAEAAAAmAAMAAQABAAEAAAAmAAQAAQACAAEAAAAmAAUAAQACAAEAAAAmAAYAAQABAAEAAAAmAAcAAQABAAEAAAAmAAgAAQACAAEAAAAmAAkAAQABAAEAAAAmAAoAAQABAAEAAAAmAAsAAQABAAEAAAAmAAwAAQACAAEAAAAmAA0AAQABAAEAAAAmAA4AAQACAAEAAAAmAA8AAQABAAEAAAAmABAAAQABAAEAAAAmABEAAQABAAEAAAAmABIAAQABAAEAAAAmABMAAQABAAEAAAAmABQAAQACAAEAAAAmABUAAQABAAEAAAAmABYAAQACAAEAAAAnAPz/AQABAAEAAAAnAP3/AQACAAEAAAAnAP7/AQACAAEAAAAnAP//AQACAAEAAAAnAAAAAQABAAEAAAAnAAEAAQACAAEAAAAnAAIAAQACAAEAAAAnAAMAAQABAAEAAAAnAAQAAQACAAEAAAAnAAUAAQABAAEAAAAnAAYAAQACAAEAAAAnAAcAAQABAAEAAAAnAAgAAQACAAEAAAAnAAkAAQACAAEAAAAnAAoAAQACAAEAAAAnAAsAAQACAAEAAAAnAAwAAQACAAEAAAAnAA0AAQABAAEAAAAnAA4AAQACAAEAAAAnAA8AAQABAAEAAAAnABAAAQABAAEAAAAnABEAAQACAAEAAAAnABIAAQACAAEAAAAnABMAAQABAAEAAAAnABQAAQACAAEAAAAnABUAAQABAAEAAAAnABYAAQABAAEAAAAnAOz/AQABAAEAAAAnAO3/AQABAAEAAAAnAO7/AQABAAEAAAAnAO//AQACAAEAAAAnAPD/AQABAAEAAAAnAPH/AQACAAEAAAAnAPL/AQABAAEAAAAnAPP/AQACAAEAAAAnAPT/AQABAAEAAAAnAPX/AQABAAEAAAAnAPb/AQABAAEAAAAnAPf/AQABAAEAAAAnAPj/AQABAAEAAAAnAPn/AQACAAEAAAAnAPr/AQACAAEAAAAnAPv/AQABAAEAAAAkAOn/AQABAAEAAAAkAOr/AQACAAEAAAAkAOv/AQABAAEAAAAlAOn/AQACAAEAAAAlAOr/AQABAAEAAAAlAOv/AQABAAEAAAAmAOn/AQABAAEAAAAmAOr/AQABAAEAAAAmAOv/AQACAAEAAAAnAOn/AQABAAEAAAAnAOr/AQABAAEAAAAnAOv/AQABAAEAAADa/xIAAQADAAEAAADa/xMAAQADAAIAAADa/xAAAQADAAEAAADa/xEAAQADAAIAAADa/w4AAQADAAEAAADa/w8AAQADAAIAAADa/wwAAQADAAEAAADa/w0AAQADAAIAAADa/woAAQADAAEAAADa/wsAAQADAAIAAADa/wgAAQADAAEAAADa/wkAAQADAAIAAADa/wYAAQADAAEAAADa/wcAAQADAAIAAADa/wQAAQADAAEAAADa/wUAAQADAAIAAADa/wIAAQADAAEAAADa/wMAAQADAAIAAADa/wAAAQADAAEAAADa/wEAAQADAAIAAADa//7/AQADAAEAAADa////AQADAAIAAADa//z/AQADAAEAAADa//3/AQADAAIAAADa//r/AQADAAEAAADa//v/AQADAAIAAADa//j/AQADAAEAAADa//n/AQADAAIAAADa//b/AQADAAEAAADa//f/AQADAAIAAADa//T/AQADAAEAAADa//X/AQADAAIAAADa//L/AQADAAEAAADa//P/AQADAAIAAADa//D/AQADAAEAAADa//H/AQADAAIAAADa/+7/AQADAAEAAADa/+//AQADAAIAAADa/+z/AQADAAEAAADa/+3/AQADAAIAAADa/+r/AQADAAEAAADa/+v/AQADAAIAAADa/+n/AQADAAIAAADY//f/AQABAAEAAADY//j/AQABAAEAAADY//n/AQACAAEAAADY//r/AQACAAEAAADY//v/AQACAAEAAADY//z/AQABAAEAAADY//3/AQABAAEAAADY//7/AQABAAEAAADY////AQACAAEAAADY/wAAAQABAAEAAADY/wEAAQABAAEAAADY/wIAAQACAAEAAADY/wMAAQACAAEAAADY/wQAAQACAAEAAADY/wUAAQACAAEAAADY/wYAAQACAAEAAADY/wcAAQABAAEAAADY/wgAAQACAAEAAADY/wkAAQACAAEAAADY/woAAQACAAEAAADY/wsAAQACAAEAAADY/wwAAQABAAEAAADY/w0AAQABAAEAAADY/w4AAQABAAEAAADY/w8AAQACAAEAAADY/xAAAQABAAEAAADY/xEAAQABAAEAAADY/xIAAQABAAEAAADY/xMAAQACAAEAAADY/xQAAQABAAEAAADY/xUAAQACAAEAAADY/xYAAQACAAEAAADZ//f/AQACAAEAAADZ//j/AQABAAEAAADZ//n/AQACAAEAAADZ//r/AQACAAEAAADZ//v/AQACAAEAAADZ//z/AQABAAEAAADZ//3/AQACAAEAAADZ//7/AQACAAEAAADZ////AQACAAEAAADZ/wAAAQACAAEAAADZ/wEAAQACAAEAAADZ/wIAAQABAAEAAADZ/wMAAQACAAEAAADZ/wQAAQACAAEAAADZ/wUAAQABAAEAAADZ/wYAAQABAAEAAADZ/wcAAQABAAEAAADZ/wgAAQABAAEAAADZ/wkAAQABAAEAAADZ/woAAQABAAEAAADZ/wsAAQACAAEAAADZ/wwAAQABAAEAAADZ/w0AAQABAAEAAADZ/w4AAQACAAEAAADZ/w8AAQACAAEAAADZ/xAAAQABAAEAAADZ/xEAAQABAAEAAADZ/xIAAQACAAEAAADZ/xMAAQABAAEAAADZ/xQAAQACAAEAAADZ/xUAAQABAAEAAADZ/xYAAQABAAEAAADY/+n/AQABAAEAAADY/+r/AQACAAEAAADY/+v/AQABAAEAAADY/+z/AQACAAEAAADY/+3/AQABAAEAAADY/+7/AQABAAEAAADY/+//AQABAAEAAADY//D/AQABAAEAAADY//H/AQABAAEAAADY//L/AQACAAEAAADY//P/AQABAAEAAADY//T/AQABAAEAAADY//X/AQACAAEAAADZ/+n/AQACAAEAAADZ/+r/AQABAAEAAADZ/+v/AQACAAEAAADZ/+z/AQABAAEAAADZ/+3/AQABAAEAAADZ/+7/AQACAAEAAADZ/+//AQABAAEAAADZ//D/AQACAAEAAADZ//H/AQACAAEAAADZ//L/AQABAAEAAADZ//P/AQABAAEAAADZ//T/AQABAAEAAADZ//X/AQABAAEAAADY//b/AQACAAEAAADZ//b/AQABAAEAAAA=")
tile_set = SubResource("TileSet_5wgse")

[node name="Foreground" type="TileMapLayer" parent="TestScene"]
z_index = 1

[connection signal="velocity_updated" from="Player2D" to="PlayerCamera2D/DebugTextLabel" method="_on_player_2d_velocity_updated"]
[connection signal="body_entered" from="Player2D/LeftWallDetectionArea2D" to="Player2D" method="_on_left_wall_detection_area_2d_body_entered"]
[connection signal="body_exited" from="Player2D/LeftWallDetectionArea2D" to="Player2D" method="_on_left_wall_detection_area_2d_body_exited"]
[connection signal="body_entered" from="Player2D/RightWallDetectionArea2D" to="Player2D" method="_on_right_wall_detection_area_2d_body_entered"]
[connection signal="body_exited" from="Player2D/RightWallDetectionArea2D" to="Player2D" method="_on_right_wall_detection_area_2d_body_exited"]
[connection signal="body_entered" from="Player2D/GroundDetectionArea2D" to="Player2D" method="_on_ground_detection_area_2d_body_entered"]
[connection signal="body_exited" from="Player2D/GroundDetectionArea2D" to="Player2D" method="_on_ground_detection_area_2d_body_exited"]
